tree-sitter-snakemake/test/corpus/wildcards.txt
===============================================================================
Wildcards (Definition)
===============================================================================

rule a:
  input:
    "a"
    "{a}"
    "{a,x\d+}"
    "{a,x\d{3}}{b}"
    "{a}{b}"
    "{{a}{b}"
    "{{a}{b}}"
    "{{a}{b}}{"
    "{{a}{b}}{{"
    "{{a}{b}}{{}}"
    f"{a}"

-------------------------------------------------------------------------------

(module (rule_definition (identifier) (rule_body (directive (directive_parameters (concatenated_string
  (string (string_content))
  (string (wildcard (identifier)))
  (string (wildcard (identifier) (constraint)))
  (string (wildcard (identifier) (constraint)) (wildcard (identifier)))
  (string (wildcard (identifier)) (wildcard (identifier)))
  (string (string_content) (wildcard (identifier)) (wildcard (identifier)))
  (string (string_content) (wildcard (identifier)) (wildcard (identifier)) (string_content))
  (string (string_content) (wildcard (identifier)) (wildcard (identifier)) (string_content))
  (string (string_content) (wildcard (identifier)) (wildcard (identifier)) (string_content))
  (string (string_content) (wildcard (identifier)) (wildcard (identifier)) (string_content))
  (string (interpolation (identifier)))
))))))


===============================================================================
Wildcards (Interpolation)
===============================================================================

rule a:
  shell:
    "a"
    "{input}"
    "{input}{output}"
    "{{input}}{output}{{}}"
    "{input.a}"
    "{input[3]}"
    "{input.a.b[3].x}"
    f"{input}"

-------------------------------------------------------------------------------

(module (rule_definition (identifier) (rule_body (directive (directive_parameters (concatenated_string
  (string (string_content))
  (string (wildcard (identifier)))
  (string (wildcard (identifier)) (wildcard (identifier)))
  (string (string_content) (wildcard (identifier)) (string_content))
  (string (wildcard (attribute (identifier) (identifier))))
  (string (wildcard (subscript (identifier) (integer))))
  (string (wildcard (attribute (subscript (attribute (attribute (identifier) (identifier)) (identifier)) (integer)) (identifier))))
  (string (interpolation (identifier)))
))))))
